<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_userInput"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="end"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        tools:text="1+2+3+4" />
    <!--android:singleLine="true"-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_calcMode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:gravity="center|start"
            android:text="INFIX"
            tools:text="INFIX" />

        <TextView
            android:id="@+id/tv_userResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="10" />
    </LinearLayout>

</LinearLayout>